<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_version_info" translatable="false">Version 1.0.0\nCopyright © 2013 NETIC, Inc. All Rights Reserved.</string>
    <string name="driver_title" translatable="false">NETIS statistics</string>

    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="login_button">Submit</string>

    <string name="base_url" translatable="false">http://stat.netis.ru/</string>
    <string name="login_url" translatable="false">login.pl</string>

    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_help">Help</string>
    <string name="action_exit">Exit</string>

    <string name="title_change_password">Change Password</string>
    <string name="title_login">Login</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_retype">New password(retype)</string>
    <string name="btn_change_password">Change</string>
    <string name="action_change_password">Change password</string>
    <string name="account_on_prepay">Get prepayment account</string>


    <string name="consuming">View records of consumption</string>
    <string name="payments">Viewing received payments and monthly charges</string>
    <string name="services">View a list of services with the tariff plans</string>
    <string name="sessions">Viewing records of communication sessions</string>

    <string name="section_1" translatable="false">Item 1</string>
    <string name="section_2" translatable="false">Item 2</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="title_activity_payments" translatable="false">PaymentsActivity</string>
    <string name="title_progress_dialog">Loading...</string>
    <string name="login_cancel">Cancel</string>
    <string name="app_name">NETIS Stat!</string>

    <string name="name_of_field_contract">Contract:</string>
    <string name="name_of_field_saldo">Saldo:</string>
    <string name="name_of_field_organization">Organization:</string>
    <string name="name_of_field_person">Person:</string>
    <string name="name_of_field_id">Account ID:</string>
    <string name="name_of_field_ipv4">Your IPv4 address:</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_prompt">Choose a service</string>
    <string name="service_name">Service:</string>
    <string name="name_date_from">Date of period start:</string>
    <string name="name_date_to">Date of period stop:</string>
    <string name="value_date_from">01.01.1980</string>
    <string name="value_date_to">31.01.1980</string>

</resources>
