<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.netis.android.netisstatistic.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="never" />
    <!--android:orderInCategory="100"-->

    <item
        android:id="@+id/action_change_password"
        android:title="@string/action_change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
