<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/fragment_consume_set">
    <LinearLayout
        android:id="@+id/consLayout1"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/service_name"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:id="@+id/spinnerServices"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:prompt="@string/service_prompt"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/consLayout2"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name_date_from"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btnFrom"
            android:text="@string/value_date_from"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/consLayout3"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name_date_to"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btnTo"
            android:text="@string/value_date_to"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/btnSubmit"
        android:text="@string/button_submit"/>
</LinearLayout>
