<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/callMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:ignore="ButtonOrder" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dialog_title_font"
            android:padding="10dp"
            android:text="@string/title_login"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:clickable="true"
            android:src="@drawable/icon"
            android:visibility="gone"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view1"
        android:paddingStart="@dimen/snackbar_padding_horizontal"
        android:paddingEnd="@dimen/snackbar_padding_horizontal"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameEditText"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:textCursorDrawable="@null"
            android:hint="@string/login_name"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view2"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingStart="@dimen/snackbar_padding_horizontal"
        android:paddingEnd="@dimen/snackbar_padding_horizontal"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_below="@+id/view"
            android:layout_alignParentEnd="true"
            android:textCursorDrawable="@null"
            tools:ignore="RtlCompat" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/snackbar_padding_horizontal"
        android:paddingEnd="@dimen/snackbar_padding_horizontal">

        <Button
            style="?android:attr/buttonBarStyle"
            android:id="@+id/buttonCancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            android:text="@android:string/cancel"
            />

        <Button
            style="?android:attr/buttonBarStyle"
            android:id="@+id/buttonSubmit"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            android:text="@android:string/ok" />
    </LinearLayout>
</LinearLayout>